# ESP-White-Knob

./: .gitignore  CMakeLists.txt  README.md  my_partitions.csv  sdkconfig
main/: CMakeLists.txt  White_Knob.c  idf_component.yml
main/app_core/dial/: dial_send.c  dial_send.h
main/app_core/html/: AP_Connected.html
main/app_core/lcd/: ui_task.c  ui_task.h
main/app_core/led/: led_decoration.c  led_decoration.h
main/app_core/smart_knob/: motor_app.c  motor_app.h  smart_knob.c  smart_knob.h
main/config/: pin_config.h
main/drivers/ble_hid/: ble_hidd_start.c  ble_hidd_start.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
main/drivers/encoder/: as5047p.c  as5047p.h
main/drivers/filter/: moving_avg_filter.c  moving_avg_filter.h
main/drivers/hx711/: hx711.c  hx711.h  press_get.c  press_get.h
main/drivers/lcd/custom_operation/: adsorb.c  adsorb.h  scroll.c  scroll.h
main/drivers/lcd/lvgl_port/: lv_port.c  lv_port.h
main/drivers/lcd/ui_manager/: dial_manager.c  dial_manager.h  light_manager.c  light_manager.h  menu_manager.c  menu_manager.h  percent_manager.c  percent_manager.h  (+10 more)
main/drivers/motor/: motor_config.c  motor_config.h  motor_control.c  motor_control.h  pid.c  pid.h  svpwm.c  svpwm.h
main/drivers/power_key/: power_key.c  power_key.h
main/drivers/time/: get_my_time.c  get_my_time.h  sntp_config.c  sntp_config.h
main/drivers/wifi/: ap_wifi.c  ap_wifi.h  my_wifi.c  my_wifi.h  web_sever.c  web_sever.h
main/drivers/ws2812/: ws2812.c  ws2812.h  ws2812_control.c  ws2812_control.h
(+10 files in other folders)
